--- a/src/app/pages/adv-search/adv-search.component.html
+++ b/src/app/pages/adv-search/adv-search.component.html
@@ -3,10 +3,10 @@
     >
     <mat-expansion-panel-header>
         <mat-panel-title>
-            Adv Search
+          <div class="back_button"> <button mat-mini-fab (click)="goBack()"><mat-icon class="white-icon">arrow_back</mat-icon></button></div> 
         </mat-panel-title>
         <mat-panel-description>
-            
+          Adv Search
         </mat-panel-description>
     </mat-expansion-panel-header>
 
