--- a/src/app/pages/edit-user/edit-user.component.html
+++ b/src/app/pages/edit-user/edit-user.component.html
@@ -4,7 +4,7 @@
         [colspan]="4"
         [rowspan]="1"
         >
-        space
+        <div class="back_button"> <button mat-mini-fab (click)="goBack()"><mat-icon class="white-icon">arrow_back</mat-icon></button></div>
     </mat-grid-tile>
     <mat-grid-tile
         [colspan]="4"
