--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -57,7 +57,7 @@
         >
         <div class="register"> 
             <span class="spanw">¿No tienes una cuenta?</span>
-            <button mat-stroked-button>Register</button>
+            <button mat-stroked-button (click)="gotoRegister()">Register</button>
         </div>
     </mat-grid-tile>
 
