--- a/src/app/components/cats-grid/cats-grid.component.css
+++ b/src/app/components/cats-grid/cats-grid.component.css
@@ -1,4 +1,3 @@
-
 mat-card {
     width: 80%;
     height: 80%;
@@ -8,4 +7,53 @@ mat-grid-list {
     background-color: var(--purple);
     padding-top: 4px;
     flex: 1;
+}
+
+
+
+mat-card-title{
+    color: orange;
+    position: absolute;
+    right: 0px;
+    bottom: 0;
+    max-width: 130px;
+    font-size: large;
+    font-weight: bold;
+    width: 100%;
+    background-color: black;
+    
+}
+
+mat-card-subtitle{
+    color: white;
+    position: absolute;
+    bottom: -7px;
+    right: 4px;
+    font-size: medium;
+    font-weight: bold;
+}
+
+
+mat-card-content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    background-color: blue;
+
+}
+
+.mat-button-toggle{
+    background-color: transparent;
+    border: 0px;
+    border-radius: 35px;
+}
+
+.mat-button-toggle-appearance-standard{
+
+}
+
+.test{
+    width: 100%;
+    background-color: brown;
 }
