--- a/src/app/pages/edit-user/edit-user.component.css
+++ b/src/app/pages/edit-user/edit-user.component.css
@@ -47,3 +47,9 @@ mat-grid-list{
       margin-left: 16px;
       margin-right: 16px;
   }
+
+  .back_button {
+    position: absolute;
+    left: 8px;
+    top: 8px;
+  }
