--- a/src/app/pages/index/index.component.css
+++ b/src/app/pages/index/index.component.css
@@ -21,6 +21,13 @@ button {
     width: 100%;
 }
 
+.background_div{
+    height: 100%;
+    width: 100%;
+    background-color: rgb(119, 255, 119);
+}
+
+
 
 
 
